Re-implemented insertValue using a suffix map based approach